@@ -34,6 +34,8 @@ quanteda 0.9.5
 
 *  tokenize.character adds a removeURL option.
 
+*  added a corpus method for data.frame objects, so that a corpus can be constructed directly from a data.frame.  Requires the addition of a `textField` argument (similar to textfile).
+
 Bug fixes
 ---------
 *  Fixed a false-alarm warning message in textmodel_wordfish()
